--- a/index.html
+++ b/index.html
@@ -407,10 +407,10 @@
       <div class = "row">
       	<div class = "col-lg-4 col-md-4 col-12">
       		<div class = "box">
-      			<a href="#"><img src="images/b3.jpg" class = "img-fluid img-thumbnail"></a>
+      			<a href="#"><img src="images/c1.jpg" class = "img-fluid img-thumbnail"></a>
       			<h3>Dim Marry</h3>
       			<h4>Sydney-Australia</h4>
-      			<p class = "m-4">They created a awesome websites for us </p>
+      			<p class = "m-4">Very fast work, and definitely high quality.They understood exactly what I needed and even made suggestions to make it better!</p>
       			<h1>DigitalBeetles</h1>
       			<h2>Web development Team</h2>
       		</div>
@@ -419,10 +419,10 @@
 
       	<div class = "col-lg-4 col-md-4 col-12">
       		<div class = "box">
-      			<a href="#"><img src="images/b3.jpg" class = "img-fluid img-thumbnail"></a>
+      			<a href="#"><img src="images/c2.jpg" class = "img-fluid img-thumbnail"></a>
       			<h3>John Winslet</h3>
       			<h4>Texas-USA</h4>
-      			<p class = "m-4">They created a awesome websites for us </p>
+      			<p class = "m-4">So many times after finishing my project he has helped me without pay. He really cares about his customers which is rare to find.</p>
       			<h1>DigitalBeetles</h1>
       			<h2>Web development Team</h2>
       		</div>
@@ -431,10 +431,10 @@
 
       	<div class = "col-lg-4 col-md-4 col-12">
       		<div class = "box">
-      			<a href="#"><img src="images/b3.jpg" class = "img-fluid img-thumbnail"></a>
+      			<a href="#"><img src="images/c3.jpg" class = "img-fluid img-thumbnail"></a>
       			<h3>Sandeep Rathore</h3>
       			<h4>Gujarat-India</h4>
-      			<p class = "m-4">They created a awesome websites for us </p>
+      			<p class = "m-4">They are hardworking, patient and very efficient programmers.As they sucessfully delivered my Website on time and on budget.</p>
       			<h1>DigitalBeetles</h1>
       			<h2>Web development Team</h2>
       		</div>
@@ -449,10 +449,10 @@
     	      <div class = "row">
       	<div class = "col-lg-4 col-md-4 col-12">
       		<div class = "box">
-      			<a href="#"><img src="images/b3.jpg" class = "img-fluid img-thumbnail"></a>
+      			<a href="#"><img src="images/c4.jpg" class = "img-fluid img-thumbnail"></a>
       			<h3>Jim Kane</h3>
       			<h4>South Honshu-Japan</h4>
-      			<p class = "m-4">They created a awesome websites for us </p>
+      			<p class = "m-4">I hired DigitalBeetles to design a Website and delivers exactly what I requested. Very nice and helpful.Highly recommends.</p>
       			<h1>DigitalBeetles</h1>
       			<h2>Web development Team</h2>
       		</div>
@@ -461,10 +461,10 @@
 
       	<div class = "col-lg-4 col-md-4 col-12">
       		<div class = "box">
-      			<a href="#"><img src="images/b3.jpg" class = "img-fluid img-thumbnail"></a>
+      			<a href="#"><img src="images/c5.jpg" class = "img-fluid img-thumbnail"></a>
       			<h3>Ayan Siddiqui</h3>
       			<h4>Hyderabad-India</h4>
-      			<p class = "m-4">They created a awesome websites for us </p>
+      			<p class = "m-4">Had a project whilst simple needed a very very quick turn around. Project was completed within an hour.I highly recommend them.</p>
       			<h1>DigitalBeetles</h1>
       			<h2>Web development Team</h2>
       		</div>
@@ -473,10 +473,10 @@
 
       	<div class = "col-lg-4 col-md-4 col-12">
       		<div class = "box">
-      			<a href="#"><img src="images/b3.jpg" class = "img-fluid img-thumbnail"></a>
+      			<a href="#"><img src="images/c7.jpg" class = "img-fluid img-thumbnail"></a>
       			<h3>Lauren Marshal</h3>
       			<h4>Detroit-USA</h4>
-      			<p class = "m-4">They created a awesome websites for us </p>
+      			<p class = "m-4">Wonderful designer, they have great attention for detail and layout. The Website looks great. DigitalBeetles are fast and responsive also.</p>
       			<h1>DigitalBeetles</h1>
       			<h2>Web development Team</h2>
       		</div>
@@ -491,10 +491,10 @@
     	      <div class = "row">
       	<div class = "col-lg-4 col-md-4 col-12">
       		<div class = "box">
-      			<a href="#"><img src="images/b3.jpg" class = "img-fluid img-thumbnail"></a>
+      			<a href="#"><img src="images/c6.jpg" class = "img-fluid img-thumbnail"></a>
       			<h3>William Robert</h3>
       			<h4>Southampton-UK</h4>
-      			<p class = "m-4">They created a awesome websites for us </p>
+      			<p class = "m-4">DigitalBeetles did excellent work helping me with my hi-resolution Web design. Very quick and responsive. Will definitely rehire for future projects!</p>
       			<h1>DigitalBeetles</h1>
       			<h2>Web development Team</h2>
       		</div>
@@ -503,10 +503,10 @@
 
       	<div class = "col-lg-4 col-md-4 col-12">
       		<div class = "box">
-      			<a href="#"><img src="images/b3.jpg" class = "img-fluid img-thumbnail"></a>
+      			<a href="#"><img src="images/c8.jpg" class = "img-fluid img-thumbnail"></a>
       			<h3>Aryan Bhattacharya</h3>
       			<h4>Delhi-India</h4>
-      			<p class = "m-4">They created a awesome websites for us </p>
+      			<p class = "m-4">Always provides us with high quality & the best work,always gets the work done promptly!! My favourite Business-Workers to work with them</p>
       			<h1>DigitalBeetles</h1>
       			<h2>Web development Team</h2>
       		</div>
@@ -515,10 +515,10 @@
 
       	<div class = "col-lg-4 col-md-4 col-12">
       		<div class = "box">
-      			<a href="#"><img src="images/b3.jpg" class = "img-fluid img-thumbnail"></a>
+      			<a href="#"><img src="images/c9.jpg" class = "img-fluid img-thumbnail"></a>
       			<h3>Mohammad Shaikh</h3>
       			<h4>Tehran-Iraq</h4>
-      			<p class = "m-4">They created a awesome websites for us </p>
+      			<p class = "m-4">Superb! Thorough! Fast! Clear communication. Strongly recommend. As always A+ work - accommodating edits and adjustments.</p>
       			<h1>DigitalBeetles</h1>
       			<h2>Web development Team</h2>
       		</div>
