--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 			<p>Own your WEB own everything by yours</p>
 			<div class = "header-buttons">
 				<a href="https://www.google.com/">AboutUs</a>
-				<a href="#contact.html">ContactUs</a>
+				<a href="contact.html">ContactUs</a>
 
 			</div>
 
